<resources>
    <string name="app_name">Быстрый счет</string>
    <string name="difficulty">Сложность</string>
    <string name="restart_btn">Начать</string>
    <string name="time">Оставшееся время</string>
    <string name="result_btn">Результат</string>
    <string name="number_field">Ответ</string>
    <string name="first_number">Первое число</string>
    <string name="second_number">Второе число</string>
    <string name="multiply">x</string>
    <string name="empty"></string>
    <string name="default_time">00:00</string>
    <string name="spec_symbol">*</string>
</resources>